fix: auth, user and project
